force-app/main/default/objects/Question_Answer__c/Question_Answer__c.object-meta.xml
<CustomObject>
    <label>Question Answer</label>
    <nameField>
        <displayFormat>QA-{000000}</displayFormat>
        <label>Ques-Ans UID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>