force-app/main/default/objects/Question_Answer__c/fields/Correct_Answer__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer__c</fullName>
    <label>Correct Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>