force-app/main/default/objects/Question_Answer__c/fields/Option1__c.field-meta.xml
<CustomField>
    <fullName>Option1__c</fullName>
    <label>Option1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>