force-app/main/default/objects/Question_Answer__c/fields/Option2__c.field-meta.xml
<CustomField>
    <fullName>Option2__c</fullName>
    <label>Option2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>