force-app/main/default/objects/Question_Answer__c/fields/Option3__c.field-meta.xml
<CustomField>
    <fullName>Option3__c</fullName>
    <label>Option3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>